# example-wormhole-nativeswap

./: README.md  asset-manifest.json  index.html  manifest.json
anchor-solana/: Anchor.toml  README.md  package.json  test.env
anchor-solana/programs/xc_swap/: Cargo.toml
anchor-solana/programs/xc_swap/src/: context.rs  contract_state.rs  env.rs  errors.rs  lib.rs  swap_helper.rs  wormhole.rs
anchor-solana/tests/: xc_swap.ts
anchor-solana/tests/helpers/: consts.ts
contracts/: .env.sample  compile_contracts.sh  deploy_to_goerli.sh  deploy_to_mumbai.sh  deploy_token.sh  deploy_v2.sh  deploy_v3.sh  package-lock.json  package.json  truffle-config.avax.js  truffle-config.bsc.js  truffle-config.ethereum.js  truffle-config.js  truffle-config.polygon.js
contracts/cfg/: truffle-config.avalanche.js  truffle-config.polygon.js  truffle-config.tokens.js
contracts/contracts/: CrossChainSwapV2.sol  CrossChainSwapV3.sol  SwapHelper.sol
contracts/contracts/shared/: IWormhole.sol  Structs.sol  SwapHelper.sol  TokenBridge.sol  (+1 more)
misc/: .gitignore  package.json  rm_js_in_src.sh  tsconfig.json
misc/scripts/: check-ust-quotes.ts  swap-everything.sh  swap-with-vaa.ts
react/: .env.sample  package-lock.json  package.json  tsconfig.json
react/public/: index.html
react/src/: App.tsx  index.js  muiTheme.js
solana/: Cargo.toml  README.md
solana/src/: api.rs  double_claim_vaa.rs  instruction.rs  instructions.rs  lib.rs  wasm.rs
solana/src/api/: complete_no_swap.rs  complete_transfer.rs  complete_transfer_and_swap.rs
solana/test/: index.js  package-lock.json  package.json
static/css/: main.a55348bc.chunk.css  main.a55348bc.chunk.css.map
static/js/: 10.0b02594e.chunk.js  10.0b02594e.chunk.js.map  10.26ac7d54.chunk.js  10.26ac7d54.chunk.js.map  10.79f79dff.chunk.js  10.79f79dff.chunk.js.map  10.7ea382fc.chunk.js  10.7ea382fc.chunk.js.map  2.21f336d6.chunk.js  2.49ba0f89.chunk.js.LICENSE.txt  2.4a828a3d.chunk.js.LICENSE.txt  2.c272ece5.chunk.js  3.1607b849.chunk.js  3.1607b849.chunk.js.map  3.568bae82.chunk.js  3.568bae82.chunk.js.map  3.616320e8.chunk.js  3.616320e8.chunk.js.map  3.ce12aaa8.chunk.js  3.ce12aaa8.chunk.js.map  3.dcadb172.chunk.js  3.dcadb172.chunk.js.map  4.1f664d67.chunk.js  4.1f664d67.chunk.js.map  4.6bf00d2c.chunk.js  4.6bf00d2c.chunk.js.map  4.73f3fd5f.chunk.js  4.73f3fd5f.chunk.js.map  4.e5eb4492.chunk.js  4.e5eb4492.chunk.js.map  4.f5779c69.chunk.js  4.f5779c69.chunk.js.map  5.0697c7d0.chunk.js  5.0697c7d0.chunk.js.map  5.159acdab.chunk.js  5.159acdab.chunk.js.map  5.3e01db43.chunk.js  5.3e01db43.chunk.js.map  5.8aac36f6.chunk.js  5.8aac36f6.chunk.js.map  (+70 more)
swap_relayer/: .env.sample  package-lock.json  package.json  tsconfig.json
swap_relayer/src/: evm.ts  index.ts  terra.ts
terra/: Cargo.toml  Dockerfile.build  README.md
terra/contracts/transfer-payload-proxy/: Cargo.toml
terra/contracts/transfer-payload-proxy/src/: contract.rs  msg.rs  state.rs
(+34 files in other folders)
