[package]
name = "wormhole-nativeswap"
version = "0.1.0"
edition = "2018"

[lib]
name = "wormhole_nativeswap"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
wasm = ["no-entrypoint"]

[dependencies]
borsh          = "=0.9.1"
solana-program = { version="=1.9.4" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
nom            = { version="7", default-features=false, features=["alloc"] }
wasm-bindgen   = { version = "0.2.74", features = ["serde-serialize"] }
solitaire   = { git = "https://github.com/certusone/wormhole", branch="feat/solana-payload" }
wormhole-sdk   = { git = "https://github.com/certusone/wormhole", branch="feat/solana-payload", features = ["testnet", "solana"] }
wormhole-bridge-solana = { git = "https://github.com/certusone/wormhole", branch="feat/solana-payload", features = ["no-entrypoint", "cpi"] }
token-bridge   = { git = "https://github.com/certusone/wormhole", branch="feat/solana-payload", features = ["no-entrypoint", "cpi"] }
getrandom      = { version = "0.1.16", features = ["dummy"] }

[dev-dependencies]
solana-program-test = "=1.9.4"
solana-sdk          = "=1.9.4"

[patch.crates-io]
memmap2 = { path = "memmap2-rs" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
