[package]
name = "transfer-payload-proxy"
version = "0.1.0"
edition = "2018"
description = "Proxy contract to allow relayers to redeem type 3 token transfers"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw20-base = { version = "0.8.0", features = ["library"] }
terraswap = "2.4.0"

wormhole-bridge-terra = { git = "https://github.com/certusone/wormhole", branch = "feat/token-bridge-proxy", features = ["library"] }
token-bridge-terra = { git = "https://github.com/certusone/wormhole", branch = "feat/token-bridge-proxy", features = ["library"] }

[dev-dependencies]
cosmwasm-vm = { version = "0.16.0", default-features = false }
